# easy-books

./: .dockerignore  .env  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  go.mod  go.sum  heroku.yml  main.go  package-lock.json  package.json  startup.sh
.devcontainer/: Dockerfile  devcontainer.env  (+2 more)
auth/: auth.go
src/backend/: .gitignore  Cargo.toml  Rocket.toml  go.mod  go.sum
src/backend/auth/: auth.go
src/backend/controllers/: controllers.go  inventory_crud.go  miscellaneous_crud.go  purchases_crud.go  relationships_crud.go  reports.go  sales_crud.go  utils.go
src/backend/middleware/: middleware.go
src/backend/migrations/2022-01-11-163652_eb_users/: up.sql
src/backend/migrations/2022-01-11-163656_eb_relationships/: up.sql
src/backend/migrations/2022-01-11-163704_eb_miscellaneous/: down.sql  up.sql
src/backend/migrations/2022-01-11-163737_eb_purchases/: up.sql
src/backend/migrations/2022-01-11-163747_eb_inventory/: down.sql  up.sql
src/backend/migrations/2022-01-11-163754_eb_sales/: up.sql
src/backend/models/: consts.go  models.go
src/backend/routes/: routes.go
src/backend/server/: server.go
src/backend/src/: consts.rs  main.rs  schema.rs  types.rs  utils.rs
src/backend/src/auth/: mod.rs
src/backend/src/controllers/: mod.rs
src/backend/src/crud/: inventory.rs  miscellaneous.rs  mod.rs  purchases.rs  relationships.rs  sales.rs
src/backend/src/fairings/: mod.rs
src/backend/src/models/: mod.rs
src/backend/src/routes/: catchers.rs  inventory.rs  miscellaneous.rs  mod.rs  purchases.rs  relationships.rs  sales.rs
src/backend/utils/: utils.go
(+214 files in other folders)
