[package]
name = "easy-books"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.1"
chrono = "0.4.19"
bigdecimal = "0.1.2"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]

[dependencies.diesel]
version = "1.4.8"
features = ["postgres", "chrono", "numeric"]
