[package]
name = "easy-books"
version = "0.1.0"
edition = "2021"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.bigdecimal]
version = "0.1.2"
features = ["serde"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]

[dependencies.diesel]
version = "1.4.8"
features = ["postgres", "chrono", "numeric"]
