[package]
name = "easy-books"
version = "0.1.0"
edition = "2021"

[dependencies]
jwt = "0.16.0"
sha2 = "0.10.1"
sha3 = "0.10.0"
hmac = "0.12.0"
meilisearch-sdk = "0.13.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.bigdecimal]
version = "0.1.2"
features = ["serde"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]

[dependencies.diesel]
version = "1.4.8"
features = ["postgres", "chrono", "numeric"]
